--- a/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
+++ b/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
@@ -15,13 +15,12 @@
                 </xpath>
                 <xpath expr="//button[@name='action_picking_move_tree']"
                        position="after">
-                    <button class="oe_stat_button" name="action_view_transporter_invoice" type="object" icon="fa-dollar"
+                    <button class="oe_stat_button" name="action_view_transporter_invoice" type="object" icon="fa-pencil-square-o"
                             attrs="{'invisible': [('is_truck_invoice_created', '=', False)]}"
                             groups="sales_team.group_sale_salesman">
                         <div class="o_field_widget o_stat_info">
-<!--                            <span class="o_stat_value">-->
-<!--                                1-->
-<!--                            </span>-->
+                            <field name="transport_invoice_count" no_label="1"/>
+
                             <span class="o_stat_text">Transporter Invoice</span>
                         </div>
                     </button>
