Changed Kemexon Ltd. to Kemexon in terms and conditions in printouts. Changed sequence to have 3 digits for transactions separated sequence to 2 digits

--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -512,7 +512,7 @@
                 <br/>
                 <!--                <span class="m-0" t-field="o.narration"/>-->
                 <ul style="font-size:18px;">
-                    <li>Kemexon Ltd. follows a detailed process as per the company policy for informing any change in
+                    <li>Kemexon follows a detailed process as per the company policy for informing any change in
                         bank account/ remittance process. We request you to not rely on any isolated email communication
                         informing the change of bank account etc. If you do so, the same shall be at your risk and
                         consequences.
