--- a/line_items_tree_views/views/line_items_tree_views.xml
+++ b/line_items_tree_views/views/line_items_tree_views.xml
@@ -54,6 +54,29 @@
             </field>
             <field name="domain">[('move_id.journal_id.type', '=', 'purchase')]</field>
         </record>
+        <record id="action_stock_truck_transport_details_lines" model="ir.actions.act_window">
+            <field name="name">Truck Transport Details</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">truck.transport.details</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{}</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Create your Truck Transport!
+                </p>
+            </field>
+        </record>
+
+        <menuitem id="menu_truck_transport_details_account"
+                  name="Truck Transport Details"
+                  action="action_stock_truck_transport_details_lines"
+                  parent="account.menu_finance_receivables"
+                  sequence="10"/>
+        <menuitem id="menu_truck_transport_details_stock"
+                  name="Truck Transport Details"
+                  action="action_stock_truck_transport_details_lines"
+                  parent="stock.menu_stock_warehouse_mgmt"
+                  sequence="20"/>
 
         <menuitem id="menu_purchase_invoice_lines"
                   name="Bill Lines"
