--- a/line_items_tree_views/views/line_items_tree_views.xml
+++ b/line_items_tree_views/views/line_items_tree_views.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
         <record id="action_purchase_order" model="ir.actions.act_window">
-            <field name="name">Purchase Order Line</field>
+            <field name="name">Purchase Order Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">purchase.order.line</field>
             <field name="view_mode">tree</field>
@@ -12,10 +12,8 @@
                 </p>
             </field>
         </record>
-
-
         <record id="action_sale_order" model="ir.actions.act_window">
-            <field name="name">Sale Order Line</field>
+            <field name="name">Sale Order Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">sale.order.line</field>
             <field name="view_mode">tree,form</field>
@@ -26,9 +24,8 @@
                 </p>
             </field>
         </record>
-
         <record id="action_account_move_line_sale" model="ir.actions.act_window">
-            <field name="name">Sale Invoice Line</field>
+            <field name="name">Sale Invoice Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">account.move.line</field>
             <field name="view_mode">tree</field>
@@ -40,9 +37,8 @@
             </field>
             <field name="domain">[('move_id.journal_id.type', '=', 'sale')]</field>
         </record>
-
         <record id="action_account_move_line_purchase" model="ir.actions.act_window">
-            <field name="name">Purchase Invoice Line</field>
+            <field name="name">Purchase Invoice Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">account.move.line</field>
             <field name="view_mode">tree</field>
@@ -66,7 +62,40 @@
                 </p>
             </field>
         </record>
-
+        <record id="action_blanket_order_lines_po" model="ir.actions.act_window">
+            <field name="name">Blanket Order Lines</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">purchase.requisition.line</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{}</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Create a new Blanket Order Line!
+                </p>
+            </field>
+        </record>
+        <record id="action_blanket_order_line_so" model="ir.actions.act_window">
+            <field name="name">Blanket Order Lines</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">orderline.orderline</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{}</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Create a new Blanket Order Line!
+                </p>
+            </field>
+        </record>
+        <menuitem id="menu_blanket_order_lines_so"
+                  name="Blanket Order Lines"
+                  action="action_blanket_order_line_so"
+                  parent="sale.sale_order_menu"
+                  sequence="12"/>
+        <menuitem id="menu_blanket_order_lines_po"
+                  name="Blanket Order Lines"
+                  action="action_blanket_order_lines_po"
+                  parent="purchase.menu_procurement_management"
+                  sequence="10"/>
         <menuitem id="menu_truck_transport_details_account"
                   name="Truck Transport Details"
                   action="action_stock_truck_transport_details_lines"
