--- a/line_items_tree_views/views/res_partner_view.xml
+++ b/line_items_tree_views/views/res_partner_view.xml
@@ -6,7 +6,7 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='short_name']" position="before">
-                    <field name="res_partner"/>
+                    <field name="res_partner_id"/>
                 </xpath>
             </field>
         </record>
