--- a/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
+++ b/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
@@ -5,6 +5,26 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//button[@name='action_confirm']"
+                       position="after">
+                    <field name="is_truck_invoice_created" invisible="1"/>
+                    <button name="action_create_truck_invoice"
+                            attrs="{'invisible': [('is_truck_invoice_created', '=', True)]}"
+                            string="Create Transporter Invoice" type="object" class="oe_highlight"/>
+
+                </xpath>
+                <xpath expr="//button[@name='action_picking_move_tree']"
+                       position="after">
+                    <button class="oe_stat_button" name="action_view_transporter_invoice" type="object" icon="fa-pencil-square-o"
+                            attrs="{'invisible': [('is_truck_invoice_created', '=', False)]}"
+                            groups="sales_team.group_sale_salesman">
+                        <div class="o_field_widget o_stat_info">
+                            <field name="transport_invoice_count" no_label="1"/>
+
+                            <span class="o_stat_text">Transporter Invoice</span>
+                        </div>
+                    </button>
+                </xpath>
                 <xpath expr="//field[@name='origin']"
                        position="after">
                     <field name="delivery_location"/>
