--- a/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
+++ b/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
@@ -15,12 +15,12 @@
                 </xpath>
                 <xpath expr="//button[@name='action_picking_move_tree']"
                        position="after">
-                    <button class="oe_stat_button" name="action_view_transporter_invoice" type="object" icon="fa-pencil-square-o"
+                    <button class="oe_stat_button" name="action_view_transporter_invoice" type="object"
+                            icon="fa-pencil-square-o"
                             attrs="{'invisible': [('is_truck_invoice_created', '=', False)]}"
                             groups="sales_team.group_sale_salesman">
                         <div class="o_field_widget o_stat_info">
                             <field name="transport_invoice_count" no_label="1"/>
-
                             <span class="o_stat_text">Transporter Invoice</span>
                         </div>
                     </button>
@@ -30,10 +30,12 @@
                     <field name="delivery_location"/>
                     <label for="delivery_from" string="Period"/>
                     <div name="date_edit_only" class="o_row oe_edit_only">
-                        <span><strong>From </strong>
+                        <span>
+                            <strong>From</strong>
                             <field name="delivery_from" class='oe_inline'/>
                         </span>
-                        <span><strong>To </strong>
+                        <span>
+                            <strong>To</strong>
                             <field name="delivery_to" class='oe_inline'/>
                         </span>
                     </div>
@@ -60,7 +62,7 @@
                     <page name="truck_details" string="Truck Details">
                         <field name="truck_transport_details_ids"/>
                     </page>
-                    <page  name="vessels_information" string="Vessel Details">
+                    <page name="vessels_information" string="Vessel Details">
                         <field name="vessel_ids"/>
                     </page>
                 </xpath>
