--- a/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
+++ b/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
@@ -13,6 +13,14 @@
                             string="Create Transporter Invoice" type="object" class="oe_highlight"/>
 
                 </xpath>
+                <xpath expr="//button[@name='button_validate' and @class='o_btn_validate']"
+                       position="attributes">
+                    <attribute name="context">{'check_condition': 1}</attribute>
+                </xpath>
+                <xpath expr="//button[@name='button_validate' and @class='oe_highlight']"
+                       position="attributes">
+                    <attribute name="context">{'check_condition': 1}</attribute>
+                </xpath>
                 <xpath expr="//button[@name='action_picking_move_tree']"
                        position="after">
                     <button class="oe_stat_button" name="action_view_transporter_invoice" type="object"
