--- a/line_items_tree_views/views/operation_type_view.xml
+++ b/line_items_tree_views/views/operation_type_view.xml
@@ -7,8 +7,11 @@
             <field name="inherit_id" ref="stock.view_move_line_tree"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='qty_done']" position="after">
-                    <field name="qty_done_incoming" sum="Sum"/>
-                    <field name="qty_done_outgoing" sum="Sum"/>
+                    <field name="qty_done_success" string="Incoming"
+                           attrs="{'invisible': [('location_usage', 'in', ('internal','transit')), ('location_dest_usage', 'not in', ('internal','transit'))]}"/>
+                    <field name="qty_done_danger" string="Outgoing"
+                           attrs="{'invisible': [('location_usage', 'not in', ('internal','transit')), ('location_dest_usage', 'in', ('internal','transit'))]}"/>
+                    <field name="qty_done_difference"/>
                     <field name="qty_done_internal_transfer" sum="Sum"/>
                 </xpath>
             </field>
