--- a/kemexon_formula_pricing/views/product_template_field_view.xml
+++ b/kemexon_formula_pricing/views/product_template_field_view.xml
@@ -7,6 +7,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='uom_po_id']" position="after">
                     <field name="m2m_price"/>
+                    <field name="mt_factor"/>
                 </xpath>
             </field>
         </record>
