--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -98,7 +98,8 @@
                 <br/>
                 <br/>
                 <br/>
-                <strong>Delivery To</strong>
+
+                      <strong>Delivery To</strong>
                 <br/>
                 <span t-field="o.partner_shipping_id.name"/>
                 <br/>
@@ -108,6 +109,7 @@
                 <br/>
                 <br/>
                 <br/>
+
                 <style>
                     .my_data_table th {border-right: 1px solid white;border-left: 1px solid white;padding-top:
                     5px;padding-bottom: 5px;}
@@ -535,7 +537,7 @@
                 <br/>
                 <!--                <span class="m-0" t-field="o.narration"/>-->
                 <ul style="font-size:18px;">
-                    <li>Kemexon Ltd. follows a detailed process as per the company policy for informing any change in
+                    <li>Kemexon follows a detailed process as per the company policy for informing any change in
                         bank account/ remittance process. We request you to not rely on any isolated email communication
                         informing the change of bank account etc. If you do so, the same shall be at your risk and
                         consequences.
