--- a/kemexon_formula_pricing/views/account_move_view.xml
+++ b/kemexon_formula_pricing/views/account_move_view.xml
@@ -5,6 +5,10 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='invoice_incoterm_id']"
+                       position="after">
+                    <field name="show_formula_pricing"/>
+                </xpath>
                 <xpath expr="//tree//field[@name='price_unit']"
                        position="before">
                     <field name="is_formula_pricing"/>
