--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -13,6 +13,7 @@
                        position="after">
                     <field name="deal_ref" invisible="0"/>
                     <field name="picking_id"  />
+                    <field name="picking_domain_ids" invisible="1"/>
                     <field name="delivery_location" invisible="0"/>
 
                     <field name="vessel_information_id" domain="[('stock_pick_ids', '=', picking_id)]" >
